--- a/1 to 7/index.html
+++ b/1 to 7/index.html
@@ -6,7 +6,6 @@
     <title>1 to 7</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='script.js'></script>
 </head>
 <body>
 <!--     
@@ -18,7 +17,11 @@ link of Youtube Channel
 https://www.youtube.com/channel/UCo92JwtW5CbyN3XO6O0qocA
 Dont forget Subscribe
  -->
+
  
+ <!-- Assign one -->
+    <!-- <h1 id="el">Page Title</h1> -->
+    <script src='script.js'></script>
 
 </body>
 </html>
